# NUMU-api

./: .env.example  .env.production.example  .env.stage.example  .env.staging  .env.staging.example  .env.test.example  .gitignore  .pre-commit-config.yaml  BACKEND_IMPLEMENTATION_SUMMARY.md  CLAUDE.md  Kashier.md  MULTI_TENANCY_Implementation_Plan.md  Makefile  PR_DESCRIPTION.md  README.md  alembic.ini  app.http  celerybeat-schedule  celerybeat-schedule-shm  celerybeat-schedule-wal  compute_kashier_sig.py  dasd  fix_mypy.py  generate_test_invoice.py  pyproject.toml  test_invoice_ar.html  test_invoice_en.html  test_kashier_e2e.py  update_themes.py
.github/: copilot-instructions.md
.github/workflows/: build-external-theme.yml  cd.yml  ci.yml  deploy-all.yml  load-test-weekly.yml  notify-commit.yml  notify-pr.yml  promote-all.yml  promote.yml  security.yml  seo-synthetic.yml
.specify/: extension-catalogs.yml  extensions.yml  feature.json  init-options.json
.specify/extensions/: .registry
.specify/integrations/: claude.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/workflows/: workflow-registry.json
.zap/: rules.tsv
alembic/: env.py
alembic/versions/: 001_create_tenants.py  002_create_users.py  20260119_052753_f06433870b55_initial_schema_with_tenant_id.py  20260123_235945_2d2b2176a338_add_customer_auth_and_addresses.py  20260127_add_invoices_table.py  20260128_add_store_subdomain_fields.py  20260129_add_cart_tables.py  20260202_add_coupon_table_and_order_coupon_fields.py  20260202_change_default_currency_to_egp.py  20260203_174144_baaa87d27421_merge_heads.py  20260203_add_rls_policies.py  20260204_add_composite_indexes.py  20260204_add_configuration_tables.py  20260204_add_customer_user_fk.py  20260204_add_notification_prefs.py  20260204_add_store_default_language.py  20260204_fix_coupons_table_schema.py  20260205_035013_9c6da865096f_add_store_onboarding_table.py  20260206_add_invoice_pdf_fields.py  20260206_add_performance_indexes.py  20260207_create_waitlist_and_feedback.py  20260220_add_coupon_targeting_fields.py  20260220_add_payment_failed_to_orderstatus.py  20260221_add_message_logs_table.py  20260222_add_platform_config_table.py  20260223_add_trial_ends_at_to_users.py  20260225_add_version_column_to_orders.py  20260301_add_shopify_tables.py  20260301_drop_shopify_tenant_fk.py  20260303_add_refunds_table.py  20260313_add_webhook_tables.py  20260314_add_2fa_table.py  20260314_add_reconciliation_tables.py  20260315_add_customer_password_hash.py  20260318_add_customer_is_verified.py  20260322_add_kashier_to_service_name_enum.py  20260323_add_shipments_table.py  20260325_add_upsell_rules_table.py  20260325_add_utm_fields_to_orders.py  20260327_add_saved_payment_methods.py  (+127 more)
docker/: Dockerfile  docker-compose.prod.yml  docker-compose.stage.yml  docker-compose.staging.yml  docker-compose.test.yml  docker-compose.yml
docker/nginx/: Dockerfile  nginx.conf
docker/postgres/: init-wal-archiving.sh  postgresql.conf
docker/redis/: sentinel.conf
docker/theme-builder/: Dockerfile  entrypoint.sh
docs/: NUMU_Big_Chance_Plan_v1.1.md  OPS_RUNBOOK.md  PERFORMANCE_OPTIMIZATION_PLAN.md  PRE_COMMIT_SETUP.md  backup-strategy.md
docs/operations/: BETA_LAUNCH_RUNBOOK.md  DOMAIN_AND_BRANDING.md
docs/runbooks/: load-test-incident.md  meta-tracking-testing.md  whatsapp-cicd-secrets.md
docs/security/: SECURITY_AUDIT_REPORT.md  dependency_audit.md  owasp_scan_report.md  pentest_checklist.md
docs/whatsapp-templates/: SUBMISSION_PACKET.md
email_previews/: 01_order_confirmation_ar.html  01_order_confirmation_en.html  02_shipped_ar.html  03_delivered_ar.html  04_confirmed_ar.html  05_processing_ar.html  06_cancelled_ar.html  07_refunded_ar.html  08_welcome_ar.html  09_first_product_ar.html  10_first_order_ar.html  11_store_approved_ar.html  12_beta_invite_ar.html  12_beta_invite_en.html  13_verify_email_ar.html  14_password_reset_ar.html  15_invoice_ar.html  16_cfg_request_received_ar.html  17_credentials_ready_ar.html  18_credentials_revoked_ar.html  19_admin_new_request_en.html  19a_otp_order_ar.html  19b_otp_password_reset_ar.html  19c_otp_phone_ar.html  19d_waitlist_welcome_ar.html  20_admin_new_request_en.html  index.html
ig_posts/: 01_payment_methods.html  _shared.css  campaign_01_teaser.html  campaign_02_reveal.html  campaign_03_pitch.html  campaign_04_egyptian_proof.html  campaign_05_cta.html  index.html
scripts/: _full_extract.txt  analyze_response_sizes.py  backfill_coupons_to_promotions.py  backup.sh  backup_db.py  check_tenants.py  create_superuser.py  deploy_staging.sh  fix_db_issues.py  generate_dashboard_plan_pdf.py  generate_jwt_keys.py  generate_phase2_pdf.py  generate_phase3_pdf.py  generate_plan_pdf.py  generate_wordmark.py  init_db.py  load_test.py  migrate_theme_settings.py  preview_emails.py  restore_db.py  run_bandit_full.py  run_owasp_scan.py  run_safety_check.py  seed_beta_features.py  seed_beta_merchants.py  seed_data.py  seed_smoke_store.py  seed_staging.py  seed_themes.py  seo_synthetic.py  smoke_meta_capi.py  smoke_meta_capi_direct.py  smoke_meta_refund.py  test_deepseek_extract.py  test_deepseek_raw.py  test_emails.py  test_google_vision.py  test_webhook_receiver.py  update_user_role.py  verify_pdf_generation.py  (+2 more)
scripts/load/: FINDINGS-2026-05-13.md  README.md  parse_summary.py  seed_load_test_stores.py  storefront_load.js
specs/: 002-post-attribution-roadmap.md
specs/001-utm-campaign-attribution/: plan.md  (+8 more)
src/: main.py
tests/: conftest.py
(+1426 files in other folders)
