[project]
name = "NUMU-backend"
version = "0.1.0"
description = "Clean Architecture e-commerce backend API"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Web Framework
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "python-multipart>=0.0.6",
    "itsdangerous>=2.1.0",  # Required by starlette session middleware

    # Database
    "sqlalchemy[asyncio]>=2.0.25",
    "asyncpg>=0.29.0",
    "alembic>=1.13.1",

    # Validation & Settings
    "pydantic>=2.5.3",
    "pydantic-settings>=2.1.0",
    "email-validator>=2.1.0",

    # Authentication
    "PyJWT[crypto]>=2.9.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt>=4.0.0,<4.1.0",  # Pin to avoid passlib compatibility issue
    "pyotp>=2.9.0",

    # External Services
    "stripe>=7.10.0",
    "openai>=1.10.0",
    "resend>=0.7.0",
    "httpx>=0.26.0",
    "boto3>=1.34.0",  # For Cloudflare R2 (S3-compatible)

    # Caching & Messaging
    "redis>=5.0.1",
    "celery>=5.3.6",

    # Observability
    "sentry-sdk[fastapi]>=1.40.0",
    "structlog>=24.1.0",

    # Utilities
    "python-slugify>=8.0.1",
    "phonenumbers>=8.13.27",
    "Pillow>=10.2.0",
    "qrcode[pil]>=7.4.0",

    # PDF Generation
    # WeasyPrint 68.0+ includes security fix CVE-2025-68616 (SSRF in url_fetcher).
    # Requires system libs: pango, cairo, gdk-pixbuf, harfbuzz, fontconfig
    # (installed in docker/Dockerfile). Uses Jinja2 (already a FastAPI dependency).
    # Ref: https://doc.courtbouillon.org/weasyprint/stable/changelog.html
    "weasyprint>=68.0",
    "Jinja2>=3.1.0",

    # Admin Panel
    "sqladmin>=0.16.0",
    "wtforms>=3.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.4",
    "pytest-asyncio>=0.23.3",
    "pytest-cov>=4.1.0",
    "pytest-benchmark>=4.0.0",
    "httpx>=0.26.0",
    "factory-boy>=3.3.0",
    "faker>=22.0.0",
    "ruff>=0.1.14",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
    "locust>=2.20.0",  # Load testing
    "aiosqlite>=0.19.0",  # SQLite async for tests
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 88
preview = true

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long
    "B008",  # function call in default argument
    "B905",  # zip without strict
    "B904",  # raise without from (intentional in some cases)
    "E402",  # module import not at top (needed for settings-dependent imports)
    "B017",  # pytest.raises(Exception) - sometimes intentional
    "B015",  # useless comparison in tests
    "F403",  # star imports - used for fixture re-exports
    "B903",  # suggest dataclass - intentional class design
]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.bandit]
exclude_dirs = ["tests", "alembic/versions"]
skips = ["B101", "B601"]
